[package]
name = "core"
version = "2.0.0-pre0"
authors = ["Stephen McGinty <stephen.f.mcginty@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "core"
path = "lib.rs"
#crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
semver = "0.9.0"

[build-dependencies]
built = "0.3"
